--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "scr/server.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node --env-file=.env src/server.js",
     "dev": "node --watch --env-file=.env src/server.js"
